Add support for Firefox's IETF-07 version of WebSocket handshake.  Not masking frames yet.